deploy/k8s/services/identity-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identityservice-api-deployment
  namespace: evolution


spec:
  replicas: 1
  selector:
    matchLabels:
      app: identityservice-api
  template:
    metadata:
      labels:
        app: identityservice-api
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "identityservice-api"
        dapr.io/app-port: "80"
        dapr.io/sidecar-liveness-probe-period-seconds: "10"
        dapr.io/sidecar-readiness-probe-period-seconds: "10"
    spec:
      containers:
      - name: identityservice-api
        image: rohitrustagi007/evo_identity:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: identityservice-api-cluster-ip
  namespace: evolution
spec:
  type: ClusterIP
  selector:
    app: identityservice-api
  ports:
  - name: identityservice-api-port
    protocol: TCP
    port: 80
    targetPort: 80
